# epubforge

./: .gitignore  AGENTS.md  README.md  config.example.toml  main.py  manifest  pyproject.toml
.beads/: config.yaml  metadata.json
.beads/hooks/: pre-commit
.claude/agents/: explorer-agent.md  impl-worker-light.md  (+3 more)
.refactor-planning/: exploration-reports.md  human_input.md  refactor-plan-human-reviewed-v1.md  refactor-plan-human-reviewed-v2.md  refactor-plan-v1.md  refactor-plan-v2.md  review-v1.md  review-v2.md
docs/: agentic-editing-howto.md  epub-editorial-process.md  finer-proofread.md  fix-plan-v3.md  footnote-audit-process.md  punctuation-audit-process.md  table-audit-process.md  usage.md
tests/: conftest.py  test_agent_output.py  test_architecture_migration.py  test_assembler.py  test_assembler_manifest.py  test_audit_detectors.py  test_audit_skip_vlm.py  test_audit_table_merge.py  test_classifier.py  test_cleaner.py  test_cli_parse_granite.py  test_config_granite.py  test_config_skip_vlm.py  test_e2e_skip_vlm.py  test_editor_apply.py  test_editor_doctor.py  test_editor_leases.py  test_editor_log.py  test_editor_memory.py  test_editor_new_ops.py  test_editor_ops.py  test_editor_stage3.py  test_editor_tool_surface.py  test_epub_builder.py  test_extract_skip_vlm.py  test_footnote_verifier.py  test_foundations_helpers.py  test_ir_semantic.py  test_llm_client.py  test_observability.py  test_pipeline_extract.py  test_pipeline_parse_granite.py  test_pipeline_parse_source.py  test_pipeline_simplify.py  test_pipeline_smoke.py  test_stage3_artifacts.py
(+147 files in other folders)
